deploy/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: resilience-lab
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-payments-prefix
  namespace: resilience-lab
spec:
  stripPrefix:
    prefixes:
      - /payments
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: resilience-lab-web
  namespace: resilience-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`resilience-lab.local`) && PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: strip-api-prefix
      services:
        - name: resilience-lab-api
          port: 8000
    - match: Host(`resilience-lab.local`) && PathPrefix(`/payments`)
      kind: Rule
      middlewares:
        - name: strip-payments-prefix
      services:
        - name: resilience-lab-payments
          port: 8001
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: resilience-lab-websecure
  namespace: resilience-lab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`resilience-lab.local`) && PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: strip-api-prefix
      services:
        - name: resilience-lab-api
          port: 8000
    - match: Host(`resilience-lab.local`) && PathPrefix(`/payments`)
      kind: Rule
      middlewares:
        - name: strip-payments-prefix
      services:
        - name: resilience-lab-payments
          port: 8001
  tls:
    secretName: resilience-lab-tls
